refactor(api): 변경사항 반영
- 문서화 API 개선